--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 						<a target="_blank" href="https://www.google.com/chrome/">Chrome</a>
 					</td>
 					<td>
-						<span class="key">⌥</span><span class="key">⌘</span><span class="key">I</span><br>
+						<span class="key">⌥</span><span class="key">⌘</span><span class="key">J</span><br>
 						<small>
 							Option
 							Command
-							<strong>I</strong>
+							<strong>J</strong>
 						</small>
 					</td>
 					<td>
